Complete redesign of the projects page - in progress Added placeholder image and gradient to contrast text in projects page Added project list grid - in progress Fixed flexbox issues on the element with id 'content' Made 'The Index' title on index page text aligned to center

--- a/css/default-style.css
+++ b/css/default-style.css
@@ -104,7 +104,8 @@ footer ul li:last-child::after {
 header ul, footer ul {
 	display: flex;
 	flex-flow: row nowrap;
-	overflow: scroll;
+	
+	overflow: scroll hidden;
 	
 	list-style: none;
 	margin: 0;
@@ -202,15 +203,14 @@ header ul li a:hover, footer ul li a:hover {
 }
 
 #content {
-	height: 100vh;
-
-	display: flex;
-
+	height: 100%;
+	
 	overflow: auto;
 	scroll-behavior: smooth;
 }
 #content::-webkit-scrollbar {
 	width: 10px;
+	height: 10px;
 }
 #content::-webkit-scrollbar-thumb, body::-webkit-scrollbar-button {
 	background-color: rgba(255, 255, 255, .4);
