--- a/css/home-style.css
+++ b/css/home-style.css
@@ -1,4 +1,5 @@
 #content {
+	display: flex;
 	flex-direction: column;
 
 	justify-content: center;
@@ -12,6 +13,8 @@
 	font-family: 'Quicksand', sans-serif;
 	font-size: 8em;
 	font-weight: 300;
+
+	text-align: center;
 }
 
 #index-underline {
